[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Justin Chan <justin@leonardo.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
pytest = "^7.4.0"
mypy = "^1.5.0"
pyspelling = "^2.8.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# To run experimental_string_processing
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ["dist"]

[tool.pytest.ini_options]
addopts = "--verbose --durations=5"
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli = "true"
log_cli_level = "DEBUG"
